// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderHeader function should return correct header when complete configuration 1`] = `"Connections, {nextUpdate} 45{units.seconds} @ 10:23:40"`;

exports[`renderHeader function should return correct header when incomplete configuration 1 1`] = `"Connections, {nextUpdate} 45{units.seconds}"`;

exports[`renderHeader function should return correct header when incomplete configuration 2 1`] = `"Connections @ 10:23:40"`;

exports[`renderHeader function should return simple string when silent configuration 1`] = `"Connections"`;

exports[`renderNoInfoVelib function should return correct HTML for table cell when no label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Stations {notYet}
   </td>
</tr>"
`;

exports[`renderNoInfoVelib function should return correct HTML for table row when label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Ulbach {notYet}
   </td>
</tr>"
`;

exports[`renderPublicTransport function should return correct HTML when no schedule 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         {unavailable}
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         {unavailable}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when no schedule and no custom label for transilien 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         Becon Les Bruyeres
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         {unavailable}
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         {unavailable}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00
      </td>
</tr>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\"></td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         Place Charras
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:05
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and concatenate arrivals 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         Place Charras
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00
      </td>
</tr>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\"></td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:15 / 13:30
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and convert to waiting time 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         15 {units.minutes}
      </td>
</tr>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\"></td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         Place Charras
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         30 {units.minutes}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and mission code 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td>
         POPU
      </td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and status info 1`] = `
"<table>
   <tr class=\\"Schedules__item bright is-delayed\\">
      <td class=\\"align-right\\">
         A
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td>
         UAPY {status.delayed}
      </td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and theorical time mode 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00{theorical}
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedules and concatenate arrivals for transilien 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         Becon
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         SAINT-NOM LA BRETECHE FORET DE MARLY
      </td>
      <td>
         SEBU
      </td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         11:20 / 11:35 / 11:50
      </td>
</tr>
</table>"
`;

exports[`renderTraffic function should return correct HTML for table row 1`] = `
"<tr class=\\"Traffic__item bright is-ok-with-work\\">
   <td class=\\"align-right\\">
      Ulbach Label
   </td>
   <td class=\\"align-left\\">
      {traffic.okwork}
   </td>
   <td class=\\"align-left\\" colspan=\\"2\\">
      message
   </td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when history with trend 1`] = `"<tr></tr>"`;

exports[`renderVelib function should return correct HTML when history without trend 1`] = `
"<tr>
   <td class=\\"align-left\\">
      10
   </td>
   <td class=\\"bright\\">
      2 {velib.bikes} 8 {velib.spaces}
   </td>
   <td class=\\"align-right\\">
      Opera
   </td>
   <td></td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when no history 1`] = `
"<tr>
   <td class=\\"bright\\">
      Opera Bis {notYet}
   </td>
</tr>"
`;

exports[`renderWrapper function should return correct HTML when loaded 1`] = `"<div class=\\"IDFTransportWrapper\\"></div>"`;

exports[`renderWrapper function should return correct HTML when not loaded 1`] = `
"<div class=\\"dimmed light small\\">
   {loading}
</div>"
`;
